# fcpp-code-examples

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/chapter-01/count-lines-stdcount/: main.cpp
src/chapter-01/count-lines-transform/: main.cpp
src/chapter-02/average-score/: main.cpp
src/chapter-02/count-lines-using-accumulate/: main.cpp
src/chapter-03/counting-team-members/: main.cpp
src/chapter-03/older-than-generic/: main.cpp
